--- a/authapp/templates/authapp/base.html
+++ b/authapp/templates/authapp/base.html
@@ -22,50 +22,24 @@
     <script src="{% static 'js/gsapCurrent.js' %}" defer></script>
     <script src="{% static 'js/priceShow.js' %}" defer></script>
     <script src="{% static 'js/sidebar.js' %}" defer></script>
-
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-<!--    &lt;!&ndash; Bootstrap CSS &ndash;&gt;-->
-<!--    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">-->
-
-    <!-- ChartJS -->
-    <link rel="stylesheet" href="{% static 'css/Chart.min.css' %}">
-
-    <!-- FontAwesome -->
-    <link rel="stylesheet" href="{% static 'css/fontawesome.all.min.css' %}">
-
-
     <title>BEAUTY Салон</title>
-
-
 </head>
 {% endblock %}
-    <div class="row justify-content-around align-items-center"
-        style="height: 100vh; margin: 0px">
-        <div class="text-center">
-            <p>
-                <a href="{% url 'mainapp:index' %}"><img src="{% static 'img/logo.png' %}" alt=""></a>
-            </p>
-            <h2>Вход пользователя</h2>
-            {% block content %}
+<body>
+{% include 'authapp/includes/messages.html' %}
+<section class="flex form-section container">
+    <h2 class="h2 red-text">{{ title }}</h2>
+    {% block content %}
 
-            {% endblock %}
-
-        </div>
+    {% endblock %}
+    <p>Вход через социальные сети</p>
+    <p>
+    <div class="btn-group btn-block" role="group">
+        <a href="#"><img src="{% static 'img/vk.svg' %}" class="social-media-img" alt="vkontakte"
+        /></a>
     </div>
+    </p>
+</section>
+</body>
 
-
-    <!-- JavaScript section -->
-    <!-- Bootstrap -->
-    <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-
-    <!-- ChartJs -->
-    <script src="{% static 'js/Chart.min.js' %}"></script>
-
-    <!-- FontAwesome -->
-    <script src="{% static 'js/fontawesome.all.min.js' %}"></script>
+</html>
