--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -16,6 +16,7 @@
         <ul class="flex menu-nav">
             <li class="hide-on-tablet"><a href="gallery.html">Галерея</a></li>
             <li class="hide-on-tablet"><a href="contacts.html">Контакты</a></li>
+            <li class="hide-on-tablet"><a href="contacts.html">Кабинет мастера</a></li>
             <li class="flex menu-icons">
                 <a href="#"
                 ><img
@@ -51,6 +52,7 @@
             <li><a href="about_us.html"> О нас</a></li>
             <li><a href="gallery.html"> Галерея</a></li>
             <li><a href="contacts.html"> Контакты</a></li>
+            <li><a href="contacts.html"> Кабинет мастера</a></li>
         </ul>
     </nav>
     <div class="flex sidenav-contacts" id="mySidenavContacts">
