--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -3,20 +3,20 @@
 <header class="container flex header">
     <nav class="navigation">
         <ul class="flex menu-nav">
-            <li><a href="#"> Услуги</a></li>
+            <li><a href="{% url 'mainapp:gallery' %}"> Услуги</a></li>
             <li><a href="#">Прайс</a></li>
-            <li><a href="about_us.html">О нас</a></li>
+            <li><a href="{% url 'mainapp:about' %}">О нас</a></li>
         </ul>
     </nav>
-    <a href="index.html" class="logo-block">
+    <a href="{% url 'mainapp:index' %}" class="logo-block">
         <p class="logo-font logo-menu">BEAUTY</p>
         <p class="logo-menu-p">САЛОН КРАСОТЫ</p>
     </a>
     <nav class="navigation show-on-tablet">
         <ul class="flex menu-nav">
-            <li class="hide-on-tablet"><a href="gallery.html">Галерея</a></li>
-            <li class="hide-on-tablet"><a href="contacts.html">Контакты</a></li>
-            <li class="hide-on-tablet"><a href="contacts.html">Кабинет мастера</a></li>
+            <li class="hide-on-tablet"><a href="{% url 'mainapp:gallery' %}">Галерея</a></li>
+            <li class="hide-on-tablet"><a href="{% url 'mainapp:contacts' %}">Контакты</a></li>
+            <li class="hide-on-tablet"><a href="#">Кабинет мастера</a></li>
             <li class="flex menu-icons">
                 <a href="#"
                 ><img
@@ -49,9 +49,9 @@
         <ul class="flex sidenav-nav">
             <li><a href="#"> Услуги</a></li>
             <li><a href="#"> Прайс</a></li>
-            <li><a href="about_us.html"> О нас</a></li>
-            <li><a href="gallery.html"> Галерея</a></li>
-            <li><a href="contacts.html"> Контакты</a></li>
+            <li><a href="{% url 'mainapp:about' %}"> О нас</a></li>
+            <li><a href="{% url 'mainapp:gallery' %}"> Галерея</a></li>
+            <li><a href="{% url 'mainapp:contacts' %}"> Контакты</a></li>
             <li><a href="contacts.html"> Кабинет мастера</a></li>
         </ul>
     </nav>
