--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -3,7 +3,6 @@
 
 
 {% block conteiner %}
-
     <!-- <section class="section-hero"></section> -->
     <section class="hero">
         <!-- Slider main container -->
@@ -29,7 +28,8 @@
         </div>
         <div class="container flex hero-content">
             <h1 class="logo-font hero-logo gsap-hero">BEAUTY</h1>
-            <p class="hero-content-p gsap-hero">Счастье любит тишину</p>
+            <p class="hero-content-p gsap-hero">+7(0000)00
+                00 00</p>
             <a href="#" class="appointment-link gsap-hero">Записаться сейчас</a>
         </div>
     </section>
