--- a/masterapp/templates/masterapp/master_detail.html
+++ b/masterapp/templates/masterapp/master_detail.html
@@ -23,6 +23,10 @@
         редактировать данные
     </button>
 
+    <button type="button">
+        <a href="{% url 'masterapp:master_create_work' %}"> добавить работу в портфолио</a>
+    </button>
+
 
     <footer class="container">
         <div class="section-footer flex">
