--- a/authapp/templates/authapp/user_profile.html
+++ b/authapp/templates/authapp/user_profile.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "authapp/base.html" %}
+{% load static %}
 
-</body>
-</html>
+{% block content %}
+    <form class="flex form">
+        <h1>Ваше имя: {{ user.first_name }}</h1>
+        <h1>Номер телефона: {{ user.phone }}</h1>
+    </form>
+{% endblock %}
