- fix login, logout

--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -6,7 +6,7 @@
         {% csrf_token %}
 
         <input type="tel" id="id_phone" name="phone"
-               pattern="[8]{1}-[0-9]{3}-[0-9]{4}"
+{#               pattern="[8]{1}-[0-9]{3}-[0-9]{4}"#}
                autocapitalize="none" autocomplete="phone"
                maxlength="150" class="input-form textinput textInput form-control"
                required="" id="id_phone" placeholder="Телефон в формате 8-456-7890"/>
