--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -6,6 +6,10 @@
             <li><a href="{% url 'mainapp:gallery' %}"> Услуги</a></li>
             <li><a href="#">Прайс</a></li>
             <li><a href="{% url 'mainapp:about' %}">О нас</a></li>
+                        {% if user.is_authenticated %}
+                <li class="hide-on-tablet"><a href="#">Личный кабинет</a>
+                </li>
+            {% endif %}
         </ul>
     </nav>
     <a href="{% url 'mainapp:index' %}" class="logo-block">
@@ -16,8 +20,10 @@
         <ul class="flex menu-nav">
             <li class="hide-on-tablet"><a href="{% url 'mainapp:gallery' %}">Галерея</a></li>
             <li class="hide-on-tablet"><a href="{% url 'mainapp:contacts' %}">Контакты</a></li>
-
-            <li class="hide-on-tablet"><a href="{% url 'masterapp:master_page' master.pk %}">Кабинет мастера</a></li>
+            {% if user.is_authenticated and user != AnonymousUser and master %}
+                <li class="hide-on-tablet"><a href="{% url 'masterapp:master_page' master.pk %}">Кабинет мастера</a>
+                </li>
+            {% endif %}
             <li class="flex menu-icons">
                 <a href="#"
                 ><img
