Install social-django

--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -9,7 +9,7 @@
 {#               pattern="[8]{1}-[0-9]{3}-[0-9]{4}"#}
                autocapitalize="none" autocomplete="phone"
                maxlength="150" class="input-form textinput textInput form-control"
-               required="" id="id_phone" placeholder="Телефон в формате 8-456-7890"/>
+               required="" id="id_phone" placeholder="Телефон в формате 8-456-123-7890"/>
 
         <input type="text" name="email" autofocus=""
                autocapitalize="none" autocomplete="email"
