--- a/authapp/templates/authapp/user_detail.html
+++ b/authapp/templates/authapp/user_detail.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<!--{% extends "authapp/base.html" %}-->
+{% load static %}
 
-</body>
-</html>
+{% block content %}
+
+<h1>{{ object.date_born }}</h1>
+<h1>{{ object.additions }}</h1>
+<h1>{{ object.favourite }}</h1>
+<span class='lead'>{{ user.first_name }} </span>
+<div class='body'>{{ user.pk__second_name|safe }} </div>
+
+<!--<ul class='latest'>-->
+<!--{% for service in latest %} <li>{{ user.pk }}. {{ user.email }}</li>{% endfor %}-->
+<!--</ul>-->
+
+{% endblock %}
