--- a/authapp/templates/registration/login.html
+++ b/authapp/templates/registration/login.html
@@ -3,22 +3,28 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-    <p>Вы уже вошли на сайт</p>
+        <p>Вы уже вошли на сайт</p>
     {% endif %}
     <form method="post" action="#" class="flex form" id="formsend">
         {% csrf_token %}
-    {{ form.as_p }}
-    <input type="hidden" name="next" value="{{ next }}">
-    <input type="submit" value="Войти">
+        {{ form.as_p }}
+        <input class="input-form" type="hidden" name="next" value="{{ next }}">
+        <input class="button-form btn btn-primary btn-block" type="submit" value="Войти">
 
 
 {#        <input type="text" name="phone" id="phone" placeholder="Логин" class="input-form"/>#}
 {##}
 {#        <input type="password" name="password" id="password" placeholder="Пароль" class="input-form"/>#}
 {#        <button type="submit" class="button-form">Вход</button>#}
-{#    </form>#}
-{#    <div class="flex form">#}
-{#        <a href="{% url 'authapp:register' %}">Регистрация</a>#}
-{#        <p class="text-right"><a href="">Забыли пароль?</a></p>#}
-{#    </div>#}
+    </form>
+    <p>
+        <div class="row justify-content-between">
+            <div class="col">
+                <a href="{% url 'authapp:register' %}"><h2>Регистрация</h2></a>
+            </div>
+            <div class="col">
+                <a href="#"><h2>Забыли пароль?</h2></a>
+             </div>
+        </div>
+    </p>
 {% endblock %}
