--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -106,7 +106,7 @@
     <footer class="container">
         <div class="section-footer flex">
             <div class="flex footer-container">
-                <a href="index.html">
+                <a href="../../../mainapp/templates/mainapp/index.html">
                     <p class="logo-font logo-menu">BEAUTY</p>
                     <p class="logo-menu-p">САЛОН КРАСОТЫ</p>
                 </a>
