--- a/masterapp/templates/masterapp/master_form.html
+++ b/masterapp/templates/masterapp/master_form.html
@@ -1,5 +1,20 @@
+{% extends 'masterapp/base.html' %}
+
+{% load static %}
+
+{% block conteiner %}
+
+<section class="flex form-section container">
     <form method="POST" class="flex form" id="formsend" enctype="multipart/form-data">
         {% csrf_token %}
-{{ form }}
+        {{ form.as_p }}
+
+        <button type="submit"
+                class="button-form btn btn-primary btn-block">
+            сохранить
+        </button>
+
     </form>
-{#TODO#}
+</section>
+
+{% endblock %}
