--- a/masterapp/templates/masterapp/completedwork_form.html
+++ b/masterapp/templates/masterapp/completedwork_form.html
@@ -4,31 +4,17 @@
 {% block conteiner %}
     <div>
         <section>
-            {#            <a href="{% url 'masterapp:master_create_work' %}">#}
-            {#                <img class="button__registration__form__img" src="/static/img/Arrow.png">#}
-            {#                Назад#}
-            {#            </a>#}
             <h1>
-                Заполни форму, что бы создать команду
+                Добавление работы
             </h1>
-            <form method="post" enctype="multipart/form-data">
+            <form method="POST" class="flex form" id="formsend" enctype="multipart/form-data">
                 {% csrf_token %}
-                {% for field in form %}
 
+                <div>
+                    {{ form.as_p }}
+                </div>
 
-
-                    <div>
-                        <label for="{{ field.id_for_label }}" class="registration__form_input_label">
-                            {{ field.label }}
-                        </label>
-                        {{ field }}
-                    </div>
-
-                {% endfor %}
-
-
-                <input type="submit" value="Создать" class="buttons_type_white button__submit__registration__form"
-                       id="submit__application">
+                <input type="submit" value="добавить" class="button-form btn btn-primary btn-block">
             </form>
         </section>
 
