--- a/static/css/style.css
+++ b/static/css/style.css
@@ -505,6 +505,11 @@
     padding: 0 1rem;
 }
 
+.form-block {
+    display: flex;
+    flex-direction: column;
+}
+
 .button-form {
     font-weight: 400;
     font-size: 2.3rem;
