--- a/mainapp/templates/mainapp/gallery.html
+++ b/mainapp/templates/mainapp/gallery.html
@@ -1,77 +1,77 @@
-{% extends 'mainapp/base.html' %}
-{% load static %}
-
-
-{% block conteiner %}
-
-    <main class="gallery-section">
-        <div class="container flex gallery-header">
-            <a href="#" class="flex gallery-name">
-                Работы мастера<br/>
-                Натальи
-                <img src="{% static 'img/Arrow-left.svg' %}" alt="arrow"/>
-            </a>
-            <div class="flex gallery-name active">
-                Работы мастера<br/>
-                Анастасии
-            </div>
-            <a href="#" class="flex gallery-name">
-                Работы мастера<br/>
-                Полины
-                <img src="{% static 'img/Arrow-right.svg' %}" alt="arrow"/>
-            </a>
-        </div>
-        <!-- <div class="container"> -->
-        <!-- Slider  -->
-        <div class="swiper swiper-gallery">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide swiper-slide-gallery">
-                    <img
-                            src="{% static 'img/work_a1.jpg' %}"
-                            class="gallery-img"
-                            alt="Салон BEAUTY"
-                    />
-                    <p class="gallery-description">Описание работы</p>
-                </div>
-                <div class="swiper-slide swiper-slide-gallery">
-                    <img
-                            src="{% static 'img/work_a2.jpg' %}"
-                            class="gallery-img"
-                            alt="Салон BEAUTY"
-                    />
-                    <p class="gallery-description">Описание работы</p>
-                </div>
-                <div class="swiper-slide swiper-slide-gallery">
-                    <img
-                            src="{% static 'img/work_a3.jpg' %}"
-                            class="gallery-img"
-                            alt="Салон BEAUTY"
-                    />
-                    <p class="gallery-description">Описание работы</p>
-                </div>
-                <div class="swiper-slide swiper-slide-gallery">
-                    <img
-                            src="{% static 'img/work_a4.jpg' %}"
-                            class="gallery-img"
-                            alt="Салон BEAUTY"
-                    />
-                    <p class="gallery-description">Описание работы</p>
-                </div>
-                <div class="swiper-slide swiper-slide-gallery">
-                    <img
-                            src="{% static 'img/work_a5.jpg' %}"
-                            class="gallery-img"
-                            alt="Салон BEAUTY"
-                    />
-                    <p class="gallery-description">Описание работы</p>
-                </div>
-            </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-        </div>
-        <!-- </div> -->
-    </main>
-
-{% endblock %}
+{#{% extends 'mainapp/base.html' %}#}
+{#{% load static %}#}
+{##}
+{##}
+{#{% block conteiner %}#}
+{##}
+{#    <main class="gallery-section">#}
+{#        <div class="container flex gallery-header">#}
+{#            <a href="#" class="flex gallery-name">#}
+{#                Работы мастера<br/>#}
+{#                Натальи#}
+{#                <img src="{% static 'img/Arrow-left.svg' %}" alt="arrow"/>#}
+{#            </a>#}
+{#            <div class="flex gallery-name active">#}
+{#                Работы мастера<br/>#}
+{#                Анастасии#}
+{#            </div>#}
+{#            <a href="#" class="flex gallery-name">#}
+{#                Работы мастера<br/>#}
+{#                Полины#}
+{#                <img src="{% static 'img/Arrow-right.svg' %}" alt="arrow"/>#}
+{#            </a>#}
+{#        </div>#}
+{#        <!-- <div class="container"> -->#}
+{#        <!-- Slider  -->#}
+{#        <div class="swiper swiper-gallery">#}
+{#            <!-- Additional required wrapper -->#}
+{#            <div class="swiper-wrapper">#}
+{#                <!-- Slides -->#}
+{#                <div class="swiper-slide swiper-slide-gallery">#}
+{#                    <img#}
+{#                            src="{% static 'img/work_a1.jpg' %}"#}
+{#                            class="gallery-img"#}
+{#                            alt="Салон BEAUTY"#}
+{#                    />#}
+{#                    <p class="gallery-description">Описание работы</p>#}
+{#                </div>#}
+{#                <div class="swiper-slide swiper-slide-gallery">#}
+{#                    <img#}
+{#                            src="{% static 'img/work_a2.jpg' %}"#}
+{#                            class="gallery-img"#}
+{#                            alt="Салон BEAUTY"#}
+{#                    />#}
+{#                    <p class="gallery-description">Описание работы</p>#}
+{#                </div>#}
+{#                <div class="swiper-slide swiper-slide-gallery">#}
+{#                    <img#}
+{#                            src="{% static 'img/work_a3.jpg' %}"#}
+{#                            class="gallery-img"#}
+{#                            alt="Салон BEAUTY"#}
+{#                    />#}
+{#                    <p class="gallery-description">Описание работы</p>#}
+{#                </div>#}
+{#                <div class="swiper-slide swiper-slide-gallery">#}
+{#                    <img#}
+{#                            src="{% static 'img/work_a4.jpg' %}"#}
+{#                            class="gallery-img"#}
+{#                            alt="Салон BEAUTY"#}
+{#                    />#}
+{#                    <p class="gallery-description">Описание работы</p>#}
+{#                </div>#}
+{#                <div class="swiper-slide swiper-slide-gallery">#}
+{#                    <img#}
+{#                            src="{% static 'img/work_a5.jpg' %}"#}
+{#                            class="gallery-img"#}
+{#                            alt="Салон BEAUTY"#}
+{#                    />#}
+{#                    <p class="gallery-description">Описание работы</p>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="swiper-button-next"></div>#}
+{#            <div class="swiper-button-prev"></div>#}
+{#        </div>#}
+{#        <!-- </div> -->#}
+{#    </main>#}
+{##}
+{#{% endblock %}#}
