- master-works on person page

--- a/masterapp/templates/masterapp/master_detail.html
+++ b/masterapp/templates/masterapp/master_detail.html
@@ -28,6 +28,16 @@
             </button>
         </div>
     </div>
+    <hr>
+    <div>
+
+        {% for work in  object.completedwork_set.all %}
+            <h2 class="h2 red-text">{{ work }}</h2>
+            <h3 class="h3 red-text">{{ work.service_id.name }}</h3>
+            <img src="/media/{{ work.photo }}" class="photo-master">
+            <h3 class="h3 red-text">{{ work.full_description }}</h3>
+        {% endfor %}
+    </div>
 
 
 {% endblock %}
