--- a/mainapp/templates/masterapp/completedwork_list.html
+++ b/mainapp/templates/masterapp/completedwork_list.html
@@ -6,20 +6,23 @@
 
     <main class="gallery-section">
         <div class="container flex gallery-header">
+            {% for item in master_list %}
+
             <a href="#" class="flex gallery-name">
                 Работы мастера<br/>
-                Натальи
-                <img src="{% static 'img/Arrow-left.svg' %}" alt="arrow"/>
+                {{ item }}
+{#                <img src="{% static 'img/Arrow-left.svg' %}" alt="arrow"/>#}
             </a>
-            <div class="flex gallery-name active">
-                Работы мастера<br/>
-                Анастасии
-            </div>
-            <a href="#" class="flex gallery-name">
-                Работы мастера<br/>
-                Полины
-                <img src="{% static 'img/Arrow-right.svg' %}" alt="arrow"/>
-            </a>
+            {% endfor %}
+{#            <div class="flex gallery-name active">#}
+{#                Работы мастера<br/>#}
+{#                Анастасии#}
+{#            </div>#}
+{#            <a href="#" class="flex gallery-name">#}
+{#                Работы мастера<br/>#}
+{#                Полины#}
+{#                <img src="{% static 'img/Arrow-right.svg' %}" alt="arrow"/>#}
+{#            </a>#}
         </div>
         <!-- <div class="container"> -->
         <!-- Slider  -->
