--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -24,9 +24,21 @@
                 <li class="hide-on-tablet"><a href="{% url 'authapp:register' %}">Регистрация</a></li>
                 <li class="hide-on-tablet"><a href="{% url 'authapp:login' %}">Вход</a></li>
             {% else %}
-                <li class="hide-on-tablet"><a href="{% url 'authapp:edit' user.pk %}">
-                    {{ user.first_name|default:user.username }}</a></li>
-                <li class="hide-on-tablet"><a href="{% url 'authapp:logout' %}">Выход</a></li>
+                <li class="hide-on-tablet">
+                    <label for="selectID"></label><select class="hide-on-tablet" id="selectID"
+                                                          onchange="window.location.href=this.options[this.selectedIndex].value">
+
+                    <option class="hide-on-tablet" value="">
+                        {{ user.first_name|default:user.username }}
+                    </option>
+
+                    <option class="hide-on-tablet" value="{% url 'authapp:edit' user.pk %}">личный кабинет</option>
+
+                    <option class="hide-on-tablet" value="{% url 'authapp:logout' %}">выход</option>
+
+                </select>
+                </li>
+                <li class="hide-on-tablet"></li>
             {% endif %}
 
 
