--- a/masterapp/templates/masterapp/completedwork_detail.html
+++ b/masterapp/templates/masterapp/completedwork_detail.html
@@ -1,193 +1,17 @@
-{% extends 'masterapp/base.html' %}
+{% extends 'mainapp/base.html' %}
 {% load static %}
 
 
 
 {% block conteiner %}
-
-    <header class="container flex header">
-        <nav class="navigation">
-            <ul class="flex menu-nav">
-                <li><a href="#"> Услуги</a></li>
-                <li><a href="#">Прайс</a></li>
-                <li><a href="about_us.html">О нас</a></li>
-            </ul>
-        </nav>
-        <a href="index.html" class="logo-block">
-            <p class="logo-font logo-menu">BEAUTY</p>
-            <p class="logo-menu-p">САЛОН КРАСОТЫ</p>
-        </a>
-        <nav class="navigation show-on-tablet">
-            <ul class="flex menu-nav">
-                <li class="hide-on-tablet"><a href="gallery.html">Галерея</a></li>
-                <li class="hide-on-tablet"><a href="completedwork_detail.html">Контакты</a></li>
-                <li class="flex menu-icons">
-                    <a href="#"
-                    ><img
-                            class="social-media-img"
-                            src="../../../static/img/telegram.svg"
-                            alt="telegram"
-                    /></a>
-                    <a href="#"
-                    ><img class="social-media-img" src="../../../static/img/vk.svg" alt="vkontakte"
-                    /></a>
-                </li>
-            </ul>
-        </nav>
-        <img src="../../../static/img/menu.svg" alt="menu" id="openNav" class="openNav desctop-hide"/>
-    </header>
-    <div id="mySidenav" class="sidenav desctop-hide">
-        <div class="flex sidenav-header">
-            <a href="index.html" class="logo-block">
-                <p class="logo-font logo-menu">BEAUTY</p>
-                <p class="logo-menu-p">САЛОН КРАСОТЫ</p>
-            </a>
-            <img src="../../../static/img/close_red.svg" alt="close" id="closeNav" class="closeNav">
-        </div>
-        <nav>
-            <ul class="flex sidenav-nav">
-                <li><a href="#"> Услуги</a></li>
-                <li><a href="#"> Прайс</a></li>
-                <li><a href="about_us.html"> О нас</a></li>
-                <li><a href="gallery.html"> Галерея</a></li>
-                <li><a href="completedwork_detail.html"> Контакты</a></li>
-            </ul>
-        </nav>
-        <div class="flex sidenav-contacts" id="mySidenavContacts">
-            <p class="ta-center">г. Город, ул. <br> Пушкина, д. 56</p>
-            <p>+7(0000)00 00 00</p>
-            <div class="flex menu-icons">
-                <a href="#"
-                ><img
-                        src="../../../static/img/telegram.svg"
-                        class="social-media-img"
-                        alt="telegram"
-                /></a>
-                <a href="#"
-                ><img src="../../../static/img/vk.svg" class="social-media-img" alt="vkontakte"
-                /></a>
-            </div>
-        </div>
-    </div>
     <div>
+
         <h2 class="h2 red-text">{{ object.service_id.name }}</h2>
-        <img src="/media/{{ object.photo }}">
+        <img src="/media/{{ object.photo }}" class="photo-work">
         <h3 class="h3 red-text">{{ object.short_description }}</h3>
         <p class="nails-recomm-h ta-center">{{ object.full_description }}</p>
         <h4 class="h3 red-text">Мастер: {{ object.master_id.user_id.first_name }}</h4>
 
     </div>
-    <main class="adress-section flex">
-        <img class="hero-img hide-mobil show-on-tablet" src="../../../static/img/location.jpg" alt="Салон BEAUTY">
-        <div class="contacts-img-main hide-on-tablet"></div>
-        <h2 class="h2 red-text">Контакты</h2>
-        <p class="flex adress-text hide-mobil show-on-tablet"><img class="contacts-img"
-                                                                   src="../../../static/img/place.svg" alt="place icon">
-            г. Город, ул. Пушкина, д. 56</p>
-        <div class="flex adress-mobile hide-on-tablet desctop-hide">
-            <img class="contacts-img" src="../../../static/img/place.svg" alt="place icon">
-            <p class="adress-text-mobile"> г. Город, <br>ул. Пушкина, д. 56
-            </p>
-        </div>
-        <div class="flex adress-div">
-            <p class="flex adress-text"><img class="contacts-img" src="../../../static/img/call.svg" alt="call icon">+7(0000)00
-                00 00</p>
-            <p class="flex adress-text"><img class="contacts-img" src="../../../static/img/date_range.svg"
-                                             alt="date icon">Пн-Вс: 9.00-21.00</p>
-        </div>
-        <img class="hero-imgs hide-mobil show-on-tablet" src="../../../static/img/map.jpg" alt="">
-        <div class="contacts-img-map hide-on-tablet"></div>
-    </main>
-    <section class="flex form-section container">
-        <h2 class="h2 red-text">Записаться на услугу</h2>
-        <p class="nails-recomm-h ta-center">
-            Заполните форму ниже и мы свяжемся с вами для уточнения <br/>информации
-            и консультации по наличию свободного времени
-        </p>
-
-        <form action="#" class="flex form">
-            <input
-                    type="text"
-                    name="name"
-                    id="name"
-                    placeholder="Имя"
-                    class="input-form"
-            />
-
-            <input
-                    type="tel"
-                    name="phone"
-                    id="phone"
-                    placeholder="Телефон"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="messenger"
-                    id="messenger"
-                    placeholder="Мессенджер"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="service"
-                    id="service"
-                    placeholder="Желаемая услуга"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="datetime"
-                    id="datetime"
-                    placeholder="Дата и время"
-                    class="input-form"
-            />
-
-            <input
-                    type="text"
-                    name="connection_type"
-                    id="connection_type"
-                    placeholder="Предпочтительный вид связи"
-                    class="input-form"
-            />
-
-            <label for="policy" class="label-form">
-                <input type="checkbox" name="policy" id="policy" required/>
-                <span
-                >Я подтверждаю согласие на обработку персональных данных в
-            соответствии с условиями
-            <span class="policy-span">Политики конфиденциальности</span></span
-                >
-            </label>
-
-            <button type="submit" class="button-form">Отправить</button>
-        </form>
-
-
-    </section>
-    <footer class="container">
-        <div class="section-footer flex">
-            <div class="flex footer-container">
-                <a href="index.html">
-                    <p class="logo-font logo-menu">BEAUTY</p>
-                    <p class="logo-menu-p">САЛОН КРАСОТЫ</p>
-                </a>
-                <a href="#" class="footer-policy">Политика конфиденциальности</a>
-
-                <div class="flex menu-icons">
-                    <a href="#"
-                    ><img
-                            src="../../../static/img/telegram.svg"
-                            class="social-media-img"
-                            alt="telegram"
-                    /></a>
-                    <a href="#"
-                    ><img src="../../../static/img/vk.svg" class="social-media-img" alt="vkontakte"
-                    /></a>
-                </div>
-            </div>
-            <a href="#" class="mobile-footer-policy desctop-hide">Политика конфиденциальности</a>
-        </div>
-    </footer>
 
 {% endblock %}
