- service and price

--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -3,8 +3,8 @@
 <header class="container flex header">
     <nav class="navigation">
         <ul class="flex menu-nav">
-            <li><a href="{% url 'mainapp:gallery' %}"> Услуги</a></li>
-            <li><a href="#">Прайс</a></li>
+            <li><a href="{% url 'mainapp:service' %}"> Услуги</a></li>
+            <li><a href="{% url 'mainapp:price' %}">Прайс</a></li>
             <li><a href="{% url 'mainapp:about' %}">О нас</a></li>
         </ul>
     </nav>
