--- a/authapp/templates/authapp/user_form.html
+++ b/authapp/templates/authapp/user_form.html
@@ -2,7 +2,7 @@
 {% block content %}
     <form method="POST" class="flex form" id="formsend" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form. }}
+        {{ form }}
         <button type="submit"
                 class="button-form btn btn-primary btn-block">
             Зарегистрироваться
